fixed post-hero section on mobile
fixed the mobile version of the custom imageslider, (all it needed was pos relative on parent element!!!

--- a/app/css/post-hero.css
+++ b/app/css/post-hero.css
@@ -1,12 +1,14 @@
-.collage-cointainer {/*body?*/
+.collage-cointainer {
   height: 100vh;
   width: 100vw;
   background-color: var(--default-bg);
   margin: 0rem;
- 
+  overflow: hidden;
+  position: relative;
 }
 
 #image-track {
+  overflow: hidden;
   display: flex;
   gap: 4vmin;
   position: absolute;
@@ -14,6 +16,7 @@
   top: 50%;
   transform: translate(0%, -50%);
   user-select: none;
+
 }
 
 #image-track > .image {
@@ -22,3 +25,6 @@
   object-fit: cover;
   object-position: 100% center;
 }
+
+
+
